--- a/public/styles/view.css
+++ b/public/styles/view.css
@@ -16,4 +16,28 @@
   object-fit: cover;
   width: 100%;
   height: 40vh;
+  z-index: -1;
+}
+
+.image-container {
+  position: relative;
+}
+
+.delete-btn {
+  position: absolute;
+  z-index: 1;
+  top: 10px;
+  right: 10px;
+  padding: 1px 7px 4px 7px;
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  color: #ffffff;
+  background-color: #d9381e;
+  box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.2);
+  display: none;
+}
+
+.image-container:hover .delete-btn {
+  display: block;
 }
